...
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="UselessLeaf" />

    <ScrollView
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="180dp"
        android:visibility="visible">
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_email_grey_24dp"
                android:hint="@string/prompt_email"
...
                android:nextFocusLeft="@id/login_email"
                android:nextFocusUp="@id/login_email"
                android:textColor="@color/text"
                android:theme="@style/EditText" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_lock_grey_24dp"
                android:hint="@string/prompt_password"
                android:imeOptions="actionUnspecified"
...
                android:maxLines="1"
                android:textColor="@color/text"
                android:theme="@style/EditText" />


            <Button
                android:id="@+id/login_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/greyblue_dark"
                android:text="@string/action_sign_in"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:indeterminate="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/activity_authentication_create_new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/activity_authenticate_create_new_account"
                android:textAlignment="center" />

        </LinearLayout>


    </ScrollView>

    <ScrollView
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/su_name_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/su_name_first_hint"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
...
                android:singleLine="true"
                android:textColor="@color/text"
                android:theme="@style/EditText" />


            <EditText
                android:id="@+id/su_name_last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/su_name_last_hint"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
...
                android:singleLine="true"
                android:textColor="@color/text"
                android:theme="@style/EditText" />


            <EditText
                android:id="@+id/su_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/su_email_hint"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
...
                android:maxLines="1"
                android:textColor="@color/text"
                android:theme="@style/EditText" />


            <EditText
                android:id="@+id/su_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/su_password_hint"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
...
                android:maxLines="1"
                android:textColor="@color/text"
                android:theme="@style/EditText" />


            <EditText
                android:id="@+id/su_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/su_password_confirm_hint"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
...
                android:singleLine="true"
                android:textColor="@color/text"
                android:theme="@style/EditText" />


            <Spinner
                android:id="@+id/su_usergroup_spinner"
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:dropDownWidth="match_parent"
                android:padding="10dp" />

            <Button
                android:id="@+id/su_signup_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/greyblue_dark"
                android:text="@string/su_signup_button"
...
                android:layout_marginTop="-6dp"
                android:layout_weight="1"
                android:indeterminate="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/activity_authentication_back_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/activity_authenticate_create_new_account"
                android:textAlignment="center" />

...
