<resources>
    <string name="app_name">Prumpo</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_login">Login</string>
    <string name="profile_activity_logout">Logout</string>

    <string name="activity_authenticate_create_new_account"><![CDATA[<font color="#5a6775">Noch keinen Account?</font> <b><font color="#ffffff">Benutzerkonto erstellen</font></b>]]></string>
    <string name="activity_authenticate_back_to_login"><![CDATA[<font color="#5a6775">Zurück zum</font> <b><font color="#ffffff">Login</font></b>]]></string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="action_sign_in_short">Benutzerkonto anlegen</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Prumpo</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_closed">Close navigation drawer</string>
    <string name="nav_appbar_map">Karte</string>
    <string name="nav_username">Benutzername</string>
    <string name="nav_role">Rolle</string>
    <string name="nav_appbar_contract">Versicherungen</string>
    <string name="nav_appbar_damagecases">Schadensfälle</string>
...
    <string name="map_frag_bottomsheet_close_dialog_header">Änderungen verwerfen?</string>
    <string name="map_frag_bottomsheet_dc_close_dialog_message">Möchten Sie Ihre aktuelle Schadensbestandaufnahme verwerfen?</string>
    <string name="map_frag_bottomsheet_insurance_close_dialog_message">Möchten Sie Änderungen Ihres aktuellen Versicherungsfalls verwefen?</string>
    <string name="map_frag_bottomsheet_delete_dialog_header">Löschen?</string>
    <string name="map_frag_bottomsheet_dc_delete_dialog_message">Möchten Sie den bestehenden Schadensfall löschen?</string>
    <string name="map_frag_bottomsheet_insurance_delete_dialog_message">Möchten Sie die bestehende Versicherung löschen?</string>
    <string name="map_frag_botsheet_dialog_yes">Ja</string>
    <string name="map_frag_botsheet_dialog_no">Nein</string>

    <string name="map_frag_botsheet_toolbar_title_dc">Unbenannter Schadensfall</string>
    <string name="map_frag_botsheet_toolbar_title_insurance">Unbenannter Versicherungsfall</string>

    <string name="map_frag_botsheet_menu_close">Schließen</string>
...
