...
                android:id="@+id/action_save_profile"
                android:enabled="false"
                android:icon="@drawable/ic_save_white_24dp"
                android:title=""
                app:showAsAction="ifRoom" />
        <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_swap_horiz_white_24dp"
                android:title="@string/profile_activity_logout"
                app:showAsAction="ifRoom"/>
    </group>


...
